--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 volumes: 
   postgres_data:
+  bundle:
 
 services:
   app:
@@ -14,11 +15,12 @@ services:
     volumes:
       - ..:/workspace:cached
       - $HOME/.ssh/:/home/ruby/.ssh/ # Mount the ssh folder to authenticate with github
+      - bundle:/usr/local/bundle
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
-    links: 
+    depends_on: 
       - db
 
   db:
